# propd

./: .gitignore  Makefile.am  README.md  configure.ac  propagated.spec
debian/: README.Debian  changelog  control  copyright  init.d  propagated.default  rules
include/: modules.h  propagate.h  propagate_list.h  propagated.h
misc/: SLES_init-propagated
src/: config.c  main.c  propagate.c  propagate_list.c  propd_get.c  propd_set.c  unix.c  unix_epoll.c  unix_select.c
